refactor(backend): apply clean code and logging across admin, seller, and user profile